Add academic CV, modify cover letter and research statement

--- a/resume_2018/cover_letter_2018.tex
+++ b/resume_2018/cover_letter_2018.tex
@@ -68,13 +68,13 @@
 I am applying for the position of \JobPositionName{} in \CompanyName{}.
 I started to analyze big data since I enrolled in my Ph.D program and prepared myself to work with big data by learning necessary knowledge and skills.
 
-I have taken several data analysis and machine learning courses and bootcamp.
+I have taken several data analysis and machine learning courses and a data science bootcamp.
 The skills such as querying data using SQL, manipulating and cleaning data using Pandas, visualizing data distributions using Matplotlib and Seaborn, and machine learning using Scikit-learn and Keras are in my toolbox now.
 Now I participate in the competitions on Kaggle to sharpen my data analysis skills and learn from other experts.
 
 The Ph.D. in high energy physics trained me to be a careful researcher and strengthened my problem solving skills.
-Presenting the findings in weekly meeting makes me able to explain quantitative topics for a variety of audiences.
-Analyzing the experimental data which are produced at a rate about 50 TB/s consolidates my C/C++ and Python programming skills.
+Presenting the findings in weekly meetings gave me the ability to explain quantitative topics for a variety of audiences.
+Analyzing the experimental data which are produced at a rate about 25 GB/s enhanced my C/C++ and Python programming skills.
 %In high energy physics, we analyze the experimental data and compare the results with the theoretical predictions.
 %The experimental raw data are produced at a rate about 50 TB/s.
 %In order to analyze the huge amount of data produced by the experiment, I developed an analysis framework using C/C++ and Python.
