--- a/templates/resume_template_4/deedy-resume-openfont.cls
+++ b/templates/resume_template_4/deedy-resume-openfont.cls
@@ -14,8 +14,8 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{titlesec}
 \usepackage[absolute]{textpos}
-\usepackage[UKenglish]{babel}
-\usepackage[UKenglish]{isodate}
+% \usepackage[UKenglish]{babel}
+% \usepackage[UKenglish]{isodate}
 \usepackage{fontspec,xltxtra,xunicode}
 
 % Color definitions
